# local-ci-cargo-outdated

./: Cargo.toml  LICENSE  README.md
assets/: example-config.toml
src/: args.rs  main.rs
